fix: overflow behaviour

--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&');
-
 /***************
  Global Styles
 ***************/
@@ -31,6 +29,7 @@ main {
     flex-direction: column;
     align-items: center;
     padding: 2rem;
+    overflow: hidden;
 }
 
 
