--- a/css/layout.css
+++ b/css/layout.css
@@ -72,6 +72,7 @@ main {
     grid-area: main;
     padding: 2rem 0;
     font-family: var(--sans-font);
+    overflow: auto;
 }
 
 
@@ -143,7 +144,6 @@ article footer {
     
     main {
         padding: 1.5rem;
-        overflow: scroll;
     }
 
     nav {
